fix css page product, responsive page shop, css scrollbar

--- a/Front-end/src/assets/style/_color.scss
+++ b/Front-end/src/assets/style/_color.scss
@@ -8,3 +8,4 @@ $text-color: #555555;
 $sub-banner-color: #9E7B5E;
 $bkg-shop-color: #f5f5f5;
 $color-white: #fff;
+$bkg-gray-color: #f5f5f5;
